Todo listo, mejorar para la proxima

--- a/HTML/PerfilPaciente.htm
+++ b/HTML/PerfilPaciente.htm
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AMAPA</title>
-    <link rel="stylesheet" href="../CSS/headerStyle.css">
+    <link rel="stylesheet" href="../CSS/headerStylePP.css">
     <link rel="stylesheet" href="../Bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../CSS/headerStyle.css">
-    <link rel="stylesheet" href="../CSS/StyleForm.css">
+    <link rel="stylesheet" href="../CSS/StyleFormPP.css">
 </head>
 
 <body>
     <!--Barra de navegación-->
-    <span class="pos" style="z-index: 0;">
+    <div style="z-index: 2; position: absolute;">
         <div id="Menu-Registro-Paciente">
             <nav>
                 <ul id="menu">
@@ -47,11 +46,11 @@
                 </ul>
             </nav>
         </div>
-    </span>
+    </div>
 
 
     <!--Formulario-->
-    <div>
+    <div style="z-index: 1;position: relative;">
         <div class="Head-Form">
             <h1>CREAR PERFIL DE MI HIJO</h1>
         </div>
